# discord-ipc

./: .gitignore  .gitmodules  CMakeLists.txt
example/: CMakeLists.txt  example.cpp
include/discord-ipc/: base_pipe.h  events_emitter.h  ipc_connection.h  packet.h  serialization.h
include/discord-ipc/serialization/: action.h  activity.h  activity_flag.h  activity_flags.h  activity_types.h  assets.h  button.h  certified_device.h  certified_device_types.h  certified_devices.h  emoji.h  key_types.h  model.h  pan.h  party.h  party_size.h  scope.h  scopes.h  secrets.h  shortcut_key_combo.h  subscription.h  subscriptions.h  timestamps.h  (+9 more)
src/: base_pipe.cpp  events_emitter.cpp  ipc_connection.cpp  serialization.cpp
src/serialization/: action.cpp  activity.cpp  assets.cpp  button.cpp  certified_device.cpp  certified_devices.cpp  emoji.cpp  model.cpp  pan.cpp  party.cpp  party_size.cpp  scopes.cpp  secrets.cpp  shortcut_key_combo.cpp  subscriptions.cpp  timestamps.cpp  user_voice_settings.cpp  vendor.cpp  voice_settings.cpp  voice_settings_device.cpp  voice_settings_input.cpp  voice_settings_mode.cpp  voice_settings_output.cpp
tests/: CMakeLists.txt  serialization.cpp
tests/serialization/: action.cpp  activity.cpp  activity_flags.cpp  assets.cpp  button.cpp  certified_device.cpp  certified_device_types.cpp  certified_devices.cpp  emoji.cpp  model.cpp  pan.cpp  party.cpp  party_size.cpp  scopes.cpp  secrets.cpp  shortcut_key_combo.cpp  subscriptions.cpp  timestamps.cpp  user_voice_settings.cpp  vendor.cpp  voice_settings_device.cpp  voice_settings_mode_types.cpp
